--- a/web/Vagrantfile
+++ b/web/Vagrantfile
@@ -22,6 +22,7 @@ Vagrant.configure("2") do |config|
   config.vm.box = "xenial-server-cloudimg-amd64-vagrant"
   config.vm.network "public_network", ip: "192.168.10.51"
   config.vm.provision "shell", path: "script.sh"
+  config.vm.network "forwarded_port", guest: 80, host: 8080
   config.vm.provision "shell", path: "web.sh"
   config.vm.synced_folder "html/", "/var/www/html/"
   config.vm.synced_folder "conf/", "/opt/"
